--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "@chakra-ui/react": "^1.7.3",
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
+    "bcryptjs": "^2.4.3",
     "framer-motion": "^4.1.17",
+    "mongodb": "^4.2.2",
     "next": "12.0.7",
+    "next-auth": "^4.0.6",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
