--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.6.0",
     "bcryptjs": "^2.4.3",
     "framer-motion": "^4.1.17",
+    "jotai": "^1.4.9",
     "mongodb": "^4.2.2",
     "next": "12.0.7",
     "next-auth": "^4.0.6",
