--- a/package.json
+++ b/package.json
@@ -13,13 +13,17 @@
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
     "bcryptjs": "^2.4.3",
+    "chart.js": "^3.7.0",
+    "feather-icons": "^4.28.0",
     "framer-motion": "^4.1.17",
     "jotai": "^1.4.9",
     "mongodb": "^4.2.2",
     "next": "12.0.7",
     "next-auth": "^4.0.6",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-chartjs-2": "^4.0.0",
+    "react-dom": "17.0.2",
+    "react-feather": "^2.0.9"
   },
   "devDependencies": {
     "@types/node": "17.0.4",
