--- a/package.json
+++ b/package.json
@@ -13,14 +13,15 @@
     "@chakra-ui/react": "^1.7.3",
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
+    "@next-auth/mongodb-adapter": "^1.0.1",
     "bcryptjs": "^2.4.3",
     "chart.js": "^3.7.0",
     "feather-icons": "^4.28.0",
     "framer-motion": "^4.1.17",
     "jotai": "^1.4.9",
-    "mongodb": "^4.2.2",
+    "mongodb": "^4.3.0",
     "next": "12.0.7",
-    "next-auth": "^4.0.6",
+    "next-auth": "^4.1.0",
     "react": "17.0.2",
     "react-chartjs-2": "^4.0.0",
     "react-dom": "17.0.2",
